added automatic detection and listing of output devices

--- a/test_notebook.ipynb
+++ b/test_notebook.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
     "import pyaudio\n",
     "p = pyaudio.PyAudio()\n",
     "info = p.get_host_api_info_by_index(0)\n",
-    "numdevices = info.get('deviceCount')\n",
+    "num_devices = info.get('deviceCount')\n",
     "for i in range(0, numdevices):\n",
     "        if (p.get_device_info_by_host_api_device_index(0, i).get('maxInputChannels')) > 0:\n",
     "            print( \"Input Device id \", i, \" - \", p.get_device_info_by_host_api_device_index(0, i).get('name'))"
@@ -114,6 +114,59 @@
    ],
    "source": [
     "p.get_default_output_device_info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'index': 0,\n",
+       " 'structVersion': 1,\n",
+       " 'type': 2,\n",
+       " 'name': 'MME',\n",
+       " 'deviceCount': 5,\n",
+       " 'defaultInputDevice': 1,\n",
+       " 'defaultOutputDevice': 3}"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'index': 0, 'structVersion': 2, 'name': 'Microsoft Sound Mapper - Input', 'hostApi': 0, 'maxInputChannels': 2, 'maxOutputChannels': 0, 'defaultLowInputLatency': 0.09, 'defaultLowOutputLatency': 0.09, 'defaultHighInputLatency': 0.18, 'defaultHighOutputLatency': 0.18, 'defaultSampleRate': 44100.0}\n",
+      "{'index': 1, 'structVersion': 2, 'name': 'Microphone Array (Realtek High ', 'hostApi': 0, 'maxInputChannels': 2, 'maxOutputChannels': 0, 'defaultLowInputLatency': 0.09, 'defaultLowOutputLatency': 0.09, 'defaultHighInputLatency': 0.18, 'defaultHighOutputLatency': 0.18, 'defaultSampleRate': 44100.0}\n",
+      "{'index': 2, 'structVersion': 2, 'name': 'Microsoft Sound Mapper - Output', 'hostApi': 0, 'maxInputChannels': 0, 'maxOutputChannels': 2, 'defaultLowInputLatency': 0.09, 'defaultLowOutputLatency': 0.09, 'defaultHighInputLatency': 0.18, 'defaultHighOutputLatency': 0.18, 'defaultSampleRate': 44100.0}\n",
+      "{'index': 3, 'structVersion': 2, 'name': 'Speakers (Realtek High Definiti', 'hostApi': 0, 'maxInputChannels': 0, 'maxOutputChannels': 6, 'defaultLowInputLatency': 0.09, 'defaultLowOutputLatency': 0.09, 'defaultHighInputLatency': 0.18, 'defaultHighOutputLatency': 0.18, 'defaultSampleRate': 44100.0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = pyaudio.PyAudio()\n",
+    "info = p.get_host_api_info_by_index(0)\n",
+    "num_devices = info.get('deviceCount')\n",
+    "for device_id in range(num_devices):\n",
+    "    device = p.get_device_info_by_host_api_device_index(0,device_id)\n",
+    "    print(device)\n",
+    "    \n",
+    "p.terminate()\n"
    ]
   },
   {
